# greg-config

./: .gitignore  MANIFEST.in  README.md  build_meta.py  glog.json  pyproject.toml  requirements.txt  setup.cfg  todo.md
.github/workflows/: python-app.yml
ch-logs/: 2024-09-25-12-51-ADDED.md
src/gfg/: __init__.py  gfg.py
