# meta data for building the package

[metadata]

    name = project-template
    version = 0.0.1
    description = project template for creating a project
    author = Gregory Denyes
    author_email = "Gregory Denyes" <greg.denyes@gmail.com>
    license = XXX
    license_files = LICENSE
    url = https://github.com/friargregarious/<project-name>
    project_urls =
        Repository = "https://github.com/friargregarious/<project-name>.git"
        Documentation = "https://github.com/friargregarious/<project-name>/blob/main/README.md"
        Issues = "https://github.com/friargregarious/<project-name>/issues"
        Changelog = "https://github.com/friargregarious/<project-name>/blob/main/changelog.md"
        Funding = "https://paypal.me/friargreg?country.x=CA&locale.x=en_US"
        "Say Thanks!" = "https://mastodon.social/@gregarious"
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Topic :: Software Development :: Build Tools",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: Apache Software License",
        "License :: OSI Approved :: MIT License",
    ]
    keywords = " , , ,"
    # platforms = ["WINDOWS", "LINUX", "MACOS"]
    platforms = ["WINDOWS"]
    requires_python = ">=3.9"
